index.html redirect update

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=http://google.com">
+        <meta http-equiv="refresh" content="0; url=./DavidLuuResume.html">
         <script type="text/javascript">
-            window.location.href = 'http://google.com'
+            window.location.href = './DavidLuuResume.html';
         </script>
         <title>Redirecting...</title>
     </head>
     <body>
-        If you are not redirected automatically, follow the <a href="http://google.com">link to example</a>
+        If you are not redirected automatically, follow the <a href="./DavidLuuResume.html">link to example</a>
     </body>
 
 </html>
