Fixed spacing issue

--- a/DavidLuuResume.html
+++ b/DavidLuuResume.html
@@ -137,8 +137,8 @@
     <!-- Pollr -->
     <div class="half text-left"><b>Pollr - Political Awareness App</b></div><!--
     --><div class="half text-right"><b>http://pollrsd.herokuapp.com</b></div><!--
-    --><div class="half text-left"><b>HTML + CSS + JS + D3.js + Node.js + Express + PostgreSQL + MongoDB</b></div><!--
-    --><div class="half text-right"><i>March 2016 to June 2016</i></div>
+    --><div class="half larger text-left"><b>HTML + CSS + JS + D3.js + Node.js + Express + PostgreSQL + MongoDB</b></div><!--
+    --><div class="half smaller text-right"><i>March 2016 to June 2016</i></div>
     <ul>
         <li>Deployed the back-end using Node.js, Express, MongoDB, and PostgreSQL.</li>
         <li>Developed back-end data manipulation methods and front-end data integration methods in order to produce D3.js visualizations.</li>
