--- a/DavidLuuResume.html
+++ b/DavidLuuResume.html
@@ -10,7 +10,7 @@
 <!-- Name/Contact Info -->
 <div id="header">
     <div class="name">David Luu</div>
-    <div><b>Email:</b> luu.david.c@gmail.com, <b>Phone:</b> 213.255.8890, <b>Website:</b> http://davidluu.me</div>
+    <div><b>Email:</b> luu.david.c@gmail.com, <b>Phone:</b> 213.255.8890, <b>Website:</b> <a href="https://davidluu.me" target="_blank" rel="noopener">https://davidluu.me</a></div>
 </div>
 
 <!-- Education -->
@@ -88,6 +88,7 @@
                 <li>D3.js</li>
                 <li>Sass</li>
                 <li>Google Analytics</li>
+                <li>Amazon AWS</li>
                 <li>Heroku</li>
             </ul>
         </div>
@@ -136,7 +137,7 @@
 
     <!-- Pollr -->
     <div class="half text-left"><b>Pollr - Political Awareness App</b></div><!--
-    --><div class="half text-right"><b>http://pollrsd.herokuapp.com</b></div><!--
+    --><div class="half text-right"><b><a href="https://pollrsd.herokuapp.com" target="_blank" rel="noopener">https://pollrsd.herokuapp.com</a></b></div><!--
     --><div class="half larger text-left"><b>HTML + CSS + JS + D3.js + Node.js + Express + PostgreSQL + MongoDB</b></div><!--
     --><div class="half smaller text-right"><i>March 2016 to June 2016</i></div>
     <ul>
@@ -145,8 +146,8 @@
     </ul>
 
     <!-- Frank -->
-    <div class="half text-left"><b>frank - Anonymous Fashion Feedback App</b></div><!--
-    --><div class="half text-right"><b>http://frank-app.herokuapp.com</b></div><!--
+    <div class="half text-left"><b>Frank - Anonymous Fashion Feedback App</b></div><!--
+    --><div class="half text-right"><b><a href="https://frank-app.herokuapp.com" target="_blank" rel="noopener">https://frank-app.herokuapp.com</a></b></div><!--
     --><div class="half text-left"><b>HTML + CSS + JS + Node.js + Express + MongoDB</b></div><!--
     --><div class="half text-right"><i>January 2016 to March 2016</i></div>
     <ul>
@@ -156,7 +157,7 @@
 
     <!-- davidluu.me -->
     <div class="half text-left"><b>Personal Website</b></div><!--
-    --><div class="half text-right"><b>http://davidluu.me</b></div><!--
+    --><div class="half text-right"><b><a href="https://davidluu.me" target="_blank" rel="noopener">https://davidluu.me</a></b></div><!--
     --><div class="half text-left"><b>HTML + CSS + JS + Node.js + Express</b></div><!--
     --><div class="half text-right"><i>Continuous</i></div>
     <ul>
