--- a/DavidLuuResume.html
+++ b/DavidLuuResume.html
@@ -10,7 +10,8 @@
 <!-- Name/Contact Info -->
 <div id="header">
     <div class="name">David Luu</div>
-    <div><b>Email:</b> luu.david.c@gmail.com, <b>Phone:</b> 213.255.8890, <b>Website:</b> <a href="https://davidluu.me" target="_blank" rel="noopener">https://davidluu.me</a></div>
+    <div><b>Email:</b> luu.david.c@gmail.com, <b>Phone:</b> 213.255.8890</div>
+    <div><b>Website:</b> <a href="https://davidluu.me" target="_blank" rel="noopener">https://davidluu.me</a>, <b>GitHub:</b> <a href="https://github.com/davidcluu" target="_blank" rel="noopener">https://github.com/davidcluu</a></div>
 </div>
 
 <!-- Education -->
@@ -30,17 +31,20 @@
             <div><b>Advanced Data Structures:</b> C++</div>
             <div><b>Algorithm Design and Analysis</b></div>
             <div><b>Software Engineering:</b> Java / Android SDK</div>
+            <div><b>Programming Languages:</b> OCaml / Scala</div>
         </div><!--
         --><div class="third">
             <div><b>Operating Systems:</b> C</div>
             <div><b>Systems Programming:</b> C / Assembly</div>
             <div><b>Computer Security:</b> C / Python / JavaScript</div>
+            <div><b>Computer Networks:</b> C</div>
             <div><b>Compiler Construction:</b> Java</div>
         </div><!--
         --><div class="third">
-            <div><b>HCI:</b> HTML / CSS / JS / Node / MongoDB</div>
+            <div><b>Human-Computer Interaction:</b> HTML / CSS / JS</div>
+            <div><b>HCI Studio:</b> HTML / CSS / JS / MongoDB</div>
+            <div><b>Database System Principles:</b> MySQL</div>
             <div><b>Server-Side Web Apps:</b> Java / PostgreSQL</div>
-            <div><b>Programming Languages:</b> OCaml / Scala</div>
             <div><b>Theory of Computability:</b> Haskell</div>
         </div>
     </div>
@@ -79,17 +83,17 @@
                 <li>GDB</li>
                 <li>Grunt</li>
                 <li>jQuery</li>
-                <li>Adobe Photoshop</li>
+                <li>D3.js</li>
             </ul>
         </div><!--
         --><div class="quarter">
             <div>&nbsp;</div>
             <ul>
-                <li>D3.js</li>
                 <li>Sass</li>
-                <li>Google Analytics</li>
                 <li>Amazon AWS</li>
                 <li>Heroku</li>
+                <li>Google Analytics</li>
+                <li>Adobe Photoshop</li>
             </ul>
         </div>
     </div>
@@ -106,7 +110,7 @@
     --><div class="half text-right"><i>September 2015 to Present</i></div>
     <ul>
         <li>Served as a tutor for CSE 105, an upper-division course about the mathematical theory of computability.</li>
-        <li>Assisted students with homework and class concepts in person during office hours and online on Piazza.</li>
+        <li>Assisted students with homework and understanding class concepts in person during office hours and online on Piazza.</li>
         <li>Graded homework and proctored/graded exams in addition to standard tutor duties.</li>
     </ul>
 
@@ -136,31 +140,32 @@
     <div class="header">Projects</div>
 
     <!-- Pollr -->
-    <div class="half text-left"><b>Pollr - Political Awareness App</b></div><!--
+    <div class="half text-left"><b>Pollr - Political Awareness Web App</b></div><!--
     --><div class="half text-right"><b><a href="https://pollrsd.herokuapp.com" target="_blank" rel="noopener">https://pollrsd.herokuapp.com</a></b></div><!--
     --><div class="half larger text-left"><b>HTML + CSS + JS + D3.js + Node.js + Express + PostgreSQL + MongoDB</b></div><!--
     --><div class="half smaller text-right"><i>March 2016 to June 2016</i></div>
     <ul>
-        <li>Deployed the back-end using Node.js, Express, MongoDB, and PostgreSQL.</li>
-        <li>Developed back-end data manipulation methods and front-end data integration methods in order to produce D3.js visualizations.</li>
+        <li>Developed and deployed the server using Node.js, Express, MongoDB, PostgreSQL, and Heroku.</li>
+        <li>Developed server-side data manipulation methods and client-side data integration methods in order to efficiently produce D3.js visualizations.</li>
     </ul>
 
     <!-- Frank -->
-    <div class="half text-left"><b>Frank - Anonymous Fashion Feedback App</b></div><!--
+    <div class="half text-left"><b>Frank - Anonymous Fashion Feedback Mobile Web App</b></div><!--
     --><div class="half text-right"><b><a href="http://troy.labs.daum.net/?url=https://frank-app.herokuapp.com" target="_blank" rel="noopener">https://frank-app.herokuapp.com</a></b></div><!--
     --><div class="half text-left"><b>HTML + CSS + JS + Node.js + Express + MongoDB</b></div><!--
     --><div class="half text-right"><i>January 2016 to March 2016</i></div>
     <ul>
-        <li>Deployed the back-end using Node.js, Express, and MongoDB.</li>
-        <li>Worked on the front-end of the site, specifically on adding interaction and generalizing HTML mockups into Handlebars templates.</li>
+        <li>Developed and deployed the server using Node.js, Express, MongoDB, and Heroku.</li>
+        <li>Worked on the front-end of the site, specifically on adding user interaction and generalizing HTML mockups into Handlebars templates.</li>
     </ul>
 
     <!-- davidluu.me -->
-    <div class="half text-left"><b>Personal Website</b></div><!--
+    <div class="half text-left"><b>Personal Portfolio Website</b></div><!--
     --><div class="half text-right"><b><a href="https://davidluu.me" target="_blank" rel="noopener">https://davidluu.me</a></b></div><!--
     --><div class="half text-left"><b>HTML + CSS + JS + Node.js + Express</b></div><!--
     --><div class="half text-right"><i>Continuous</i></div>
     <ul>
+        <li>Developed and deployed the server using Node.js, Express, and Amazon AWS</li>
         <li>Designed and developed a personal website focusing on minimalistic design - a complete list of projects is there.</li>
     </ul>
 </div>
