Reverted link change

--- a/DavidLuuResume.html
+++ b/DavidLuuResume.html
@@ -151,7 +151,7 @@
 
     <!-- Frank -->
     <div class="half text-left"><b>Frank - Anonymous Fashion Feedback Mobile Web App</b></div><!--
-    --><div class="half text-right"><b><a href="http://troy.labs.daum.net/?url=https://frank-app.herokuapp.com" target="_blank" rel="noopener">https://frank-app.herokuapp.com</a></b></div><!--
+    --><div class="half text-right"><b><a href="https://frank-app.herokuapp.com" target="_blank" rel="noopener">https://frank-app.herokuapp.com</a></b></div><!--
     --><div class="half text-left"><b>HTML + CSS + JS + Node.js + Express + MongoDB</b></div><!--
     --><div class="half text-right"><i>January 2016 to March 2016</i></div>
     <ul>
